# tt-topology

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  setup.py
.github/workflows/: release.yml
debian/: changelog  control  copyright  debhelper-build-stamp  files
tt_topology/: __init__.py  __main__.py  backend.py  constants.py  flash_to_my_coords.py  log.py  tt_topology.py
tt_topology/data/wormhole/: fw_defines.yaml
tt_topology/tests/: test_detect_current_configs.py  test_galaxy.py  test_linear.py  test_mesh.py  test_new_mesh.py  test_torus.py  ubb_isolation_test.py
tt_topology/ubb_topo/: ubb_topology.py
