[project]
name = "tt-topology"
version = "1.2.8"
description = "ethernet topology configuration tool for Tenstorrent silicon"
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}
authors = [
  { name = "Sam Bansal", email = "sbansal@tenstorrent.com" }
]
maintainers = [
  { name = "Sam Bansal", email = "sbansal@tenstorrent.com" }
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console :: Curses",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
  'black==24.3.0',
  'elasticsearch==8.11.0',
  'pydantic>=1.2',
  'pyluwen @ git+https://github.com/tenstorrent/luwen.git@v0.6.4#subdirectory=crates/pyluwen',
  'tt_tools_common @ git+https://github.com/tenstorrent/tt-tools-common.git@v1.4.15',
  'pre-commit==3.5.0',
  'networkx==3.1',
  'matplotlib==3.7.4',
  'setuptools==78.1.1',
]

[project.urls]
"Homepage" = "http://tenstorrent.com"
"Bug Reports" = "https://github.com/tenstorrent/tt-topology/issues"
"Source" = "https://github.com/tenstorrent/tt-topology"

[project.scripts]
tt-topology = "tt_topology:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"*" = [
  "data/*/*.yaml",
  "data/*/*/*.yaml",
]

[tools.setuptools.exclude-package-data]
"*" = [
  'build',
]

[tool.setuptools.packages.find]
where = [ ".", ]

[build-system]
# These are the assumed default build requirements from pip:
# https://pip.pypa.io/en/stable/reference/pip/#pep-517-and-518-support
requires = [
  "setuptools>=43.0.0",
  "wheel"
]
build-backend = "setuptools.build_meta"

# vim: expandtab:ts=2:sw=2:ai
