[project]
name = "tt-topology"
version = "1.2.13"
description = "ethernet topology configuration tool for Tenstorrent silicon"
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}
authors = [
  { name = "Sam Bansal", email = "sbansal@tenstorrent.com" }
]
maintainers = [
  { name = "Sam Bansal", email = "sbansal@tenstorrent.com" }
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console :: Curses",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
  'black==24.3.0',
  'elasticsearch==8.11.0',
  'matplotlib==3.7.4',
  'networkx==3.1',
  'pre-commit==3.5.0',
  'pydantic>=1.2',
  'pyluwen>=0.7.9',
  'setuptools==78.1.1',
  "tomli == 2.0.1; python_version < '3.11'",
  'tt_tools_common>=1.4.19',
]

[project.urls]
"Homepage" = "http://tenstorrent.com"
"Bug Reports" = "https://github.com/tenstorrent/tt-topology/issues"
"Source" = "https://github.com/tenstorrent/tt-topology"

[project.scripts]
tt-topology = "tt_topology:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"*" = [
  "data/*/*.yaml",
  "data/*/*/*.yaml",
]

[tool.setuptools.exclude-package-data]
"*" = [
  'build',
  'debian',
]

[tool.setuptools.packages.find]
where = [ ".", ]

[build-system]
# These are the assumed default build requirements from pip:
# https://pip.pypa.io/en/stable/reference/pip/#pep-517-and-518-support
requires = [
  "setuptools>=43.0.0",
  "wheel"
]
build-backend = "setuptools.build_meta"

# vim: expandtab:ts=2:sw=2:ai
